--- a/package.json
+++ b/package.json
@@ -4,9 +4,48 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/jest",
+    "build:commonjs": "BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:es": "BABEL_ENV=es babel src --out-dir es",
+    "build:umd": "BABEL_ENV=commonjs NODE_ENV=development webpack src/index.js dist/react-stripe-elements.js --config webpack.config.prod.js",
+    "build:umd:min": "BABEL_ENV=commonjs NODE_ENV=production webpack src/index.js dist/react-stripe-elements.min.js --config webpack.config.prod.js",
+    "lint": "node_modules/.bin/eslint src",
+    "flow": "node_modules/.bin/flow",
+    "build": "npm run lint && npm run flow && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "demo": "node_modules/.bin/webpack-dev-server --content-base dist"
   },
   "keywords": [],
   "author": "Stripe (https://www.stripe.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prop-types": "^15.5.8",
+    "webpack": "^2.4.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
+    "babel-jest": "^19.0.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-config-stripe": "^1.0.10",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-jest": "^19.0.1",
+    "flow-bin": "^0.44.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.2",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "0.15",
+    "react-dom": "^15.5.4",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "peerDependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  }
 }
