--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
     "rimraf": "^2.6.1",
+    "typescript": "^2.3.2",
+    "typescript-definition-tester": "^0.0.5",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   },
