--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-stripe": "^1.0.10",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-jsx-a11y": "2.2.3",
     "flow-bin": "^0.44.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
