--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "flow": "flow",
     "build": "yarn run lint && yarn run flow && yarn run build:commonjs && yarn run build:es && yarn run build:umd && yarn run build:umd:min",
     "clean": "rimraf lib dist es",
+    "prettier": "prettier --single-quote --trailing-comma es5 --bracket-spacing false --parser flow src/**/*.js demo/**/*.js --write",
+    "prettier-list-different": "prettier --single-quote --trailing-comma es5 --bracket-spacing false --parser flow src/**/*.js demo/**/*.js --list-different",
     "prepublish": "yarn run clean && yarn run build",
     "demo": "webpack-dev-server --content-base dist"
   },
@@ -47,12 +49,14 @@
     "cross-env": "^4.0.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
+    "eslint-config-prettier": "^2.3.0",
     "eslint-config-stripe": "^1.0.10",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-jest": "^19.0.1",
     "flow-bin": "^0.44.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "prettier": "^1.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
