--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-stripe": "^1.0.13",
     "eslint-plugin-flowtype": "^2.35.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.1.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.54.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
