--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "cross-env": "^5.0.5",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
-    "eslint-config-prettier": "^2.6.0",
+    "eslint-config-prettier": "2.6.0",
     "eslint-config-stripe": "^1.0.13",
     "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-jest": "^21.1.0",
     "flow-bin": "^0.54.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
-    "prettier": "^1.7.4",
+    "prettier": "1.7.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
