--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "flow": "flow",
     "build": "yarn run lint && yarn run flow && yarn run build:commonjs && yarn run build:es && yarn run build:umd && yarn run build:umd:min",
     "clean": "rimraf lib dist es",
-    "prettier": "prettier --single-quote --trailing-comma es5 --bracket-spacing false --parser flow src/**/*.js demo/**/*.js --write",
-    "prettier-list-different": "prettier --single-quote --trailing-comma es5 --bracket-spacing false --parser flow src/**/*.js demo/**/*.js --list-different",
+    "prettier": "prettier src/**/*.js demo/**/*.js --write",
+    "prettier-list-different": "prettier src/**/*.js demo/**/*.js --list-different",
     "prepublish": "yarn run clean && yarn run build",
     "demo": "webpack-dev-server --content-base dist"
   },
@@ -49,14 +49,14 @@
     "cross-env": "^5.0.5",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
-    "eslint-config-prettier": "^2.4.0",
+    "eslint-config-prettier": "2.6.0",
     "eslint-config-stripe": "^1.0.13",
     "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-jest": "^21.1.0",
     "flow-bin": "^0.54.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
-    "prettier": "^1.6.1",
+    "prettier": "1.7.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
