Comply more closely with standard-readme
https://github.com/RichardLitt/standard-readme/blob/master/spec.md

For most of the sections below the ToC we don't comply,
but we do for the ones above.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-stripe-elements",
   "version": "1.2.0",
-  "description": "",
+  "description": "React components for Stripe.js and Stripe Elements",
   "main": "./lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
