--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Stripe (https://www.stripe.com)",
   "license": "MIT",
   "dependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.6.0"
   },
   "repository": {
     "type": "git",
@@ -49,7 +49,8 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.5",
     "doctoc": "^1.3.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.0.1",
+    "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.6.1",
     "eslint-config-prettier": "2.6.0",
     "eslint-config-stripe": "^1.0.13",
@@ -62,9 +63,9 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
     "prettier": "1.7.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.1"
