fix: ie10 and below props access in constructors (#140)

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["react", "env"],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    [ "transform-es2015-classes", { "loose": true } ]
+  ]
 }
