--- a/package.json
+++ b/package.json
@@ -52,16 +52,16 @@
     "doctoc": "^1.3.0",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
-    "eslint-config-prettier": "2.6.0",
+    "eslint-config-prettier": "2.9.0",
     "eslint-config-stripe": "^1.0.13",
     "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.1.0",
+    "eslint-plugin-jest": "21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "0.73.0",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.1.0",
+    "jest": "23.0.1",
     "prettier": "1.13.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
