--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "prettier": "prettier './**/*.js' './**/*.css' './**/*.md' --write",
     "prettier-list-different": "prettier './**/*.js' './**/*.css' './**/*.md' --list-different",
     "prepublish": "yarn run clean && yarn run build",
-    "demo": "webpack-dev-server --content-base dist",
     "doctoc": "doctoc README.md"
   },
   "keywords": [],
   "author": "Stripe (https://www.stripe.com)",
   "license": "MIT",
   "dependencies": {
+    "eslint-config-react-app": "^2.1.0",
     "prop-types": "^15.5.10"
   },
   "repository": {
@@ -51,14 +51,14 @@
     "cross-env": "^5.0.5",
     "doctoc": "^1.3.0",
     "enzyme": "^2.9.1",
-    "eslint": "^4.6.1",
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "2.9.0",
-    "eslint-config-stripe": "^1.0.13",
+    "eslint-config-stripe": "^1.2.0",
     "eslint-plugin-flowtype": "^2.35.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "21.17.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "flow-bin": "0.73.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "23.0.1",
