--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.5",
     "doctoc": "^1.3.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-15": "^1.1.1",
     "eslint": "^4.6.1",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-stripe": "^1.0.13",
@@ -74,5 +75,8 @@
   "peerDependencies": {
     "react": "^15.5.4 || ^16.0.0-0",
     "react-dom": "^15.5.4 || ^16.0.0-0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.js"
   }
 }
