--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eslint-plugin-jest": "21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "0.73.0",
+    "flow-bin": "^0.90.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "23.6.0",
     "prettier": "1.13.2",
